modules/boogie/test/data/TypeSystemException/Orderings2.bpl
type C;
const c0:C;
const c1:C extends c0, c0;    // error: parent mentioned twice
